# proxmoxmcp

./: .env_exemple  .gitignore  README.md  main.py  pyproject.toml
mcp_server/: client.py  config.py  server.py
mcp_server/tools/: __init__.py  base.py  list_disks.py  list_qemu.py  list_vms.py
