[project]
name = "proxmoxmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mcp>=1.26.0",
    "proxmoxer>=2.3.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.26.0",
]
